--- a/TODO
+++ b/TODO
@@ -1,9 +1,25 @@
 ToySM TODO list:
 
-x python2 issues:
-  - sched.run doesn't support the non-blocking variant
-    => should be possible to work around the issue by defining
-       a custom 'wait' function.
+## Legend:
+x: done
+~: partially done
+*: need evolution in an external package
+?: maybe worth doing, needs more thought put into it
+
+## Stuff missing from UML State Machines
+- add support for event deferral
+- support for Choice Pseudo States (i.e. Dynamic eval as opposed to static
+  eval currently in place for Junctions)
+
+## Features
+- threaded state
+- multi-instance FSM:
+  - a function is used to determine a key based on Events posted
+    to event queue, each unknown key yields a new FSM, and those
+    that yield a known key are processed by their specific FSM.
+- implement StateMachine pause function
+
+## DONE / Partially DONE ##
 ~ graph
 ~ debug
   1.one state instance
@@ -12,16 +28,15 @@ x python2 issues:
   for 1 & 2, a decorator/function to be applied to class/instance much
   like the Trace used in the test classes.
   => for now only a Logger is defined (TBD if this is sufficient)
-- threaded state
+x python2 issues:
+  - sched.run doesn't support the non-blocking variant
+    => should be possible to work around the issue by defining
+       a custom 'wait' function.
 x history states
   => DeepHistory not done yet
 x s1>'x'>s2 doesn't work because it translates to s1 > 'x' and 'x'>s2...
   whereas (s1 > 'x') > s2 works and so does s1 > ('x' > s2) !!!!
   => resolved by using r/lshift operators
-- multi-instance FSM:
-  - a function is used to determine a key based on Events posted
-    to event queue, each unknown key yields a new FSM, and those
-    that yield a known key are processed by their specific FSM.
 x replace on_entry by _on_entry and have the latter callback into an
   optional user defined on_enty. Same for on_exit/_on_exit.
 x Allow State constructor to receive substates, e.g.
@@ -41,10 +56,11 @@ x get_*_transitions methods could _yield_ their result
 etc)
 * graph: edge labels aren't positionned properly when source/target is a
          cluster (this is an issue with Graphviz)
-- graph (optional): use a metaclass to have each subclass of DotMixin
+? graph (optional): use a metaclass to have each subclass of DotMixin
          merge local attributes with those from superclasses. This would
          allow inheritance of all attributes that aren't locally overriden
          instead of forcing a complete redefinition of the 'dot' dictionary.
+* graph: specific representation for entry/exit states
 x rework get_enabled_transitions in State, possible to transfer logic
   for compound transitions to StateMachine
   => logic simplified by recursively resolving entry transitions directly
@@ -53,19 +69,13 @@ x rework get_enabled_transitions in State, possible to transfer logic
   => one assert left
 x remove code used when a transition's source/target  is redefined, should
   simply considered an error/exception.
-- implement StateMachine pause function
-- add support for event deferral
-- support for Choice Pseudo States (i.e. Dynamic eval as opposed to static
-  eval currently in place for Junctions)
-- Add GPL file and GPL headers to .py files.
-- Scapy integration (PacketTransition StateMachineBox)
+x Add GPL file and GPL headers to .py files.
+~ Scapy integration (PacketTransition StateMachineBox)
 x use 'public' decorator snippet to manage exported/public symbols
 x remove DotMixin => functionality isn't used, replace it with a function
   to generate the attribute string based on the dot attribute of a node.
-* graph: specific representation for entry/exit states
 x break fsm.py up into several files: sm.py transition.py state.py
   => core.py contains transition + state (dificult to avoid circular dependencies
   otherwise)
 x join should return a boolean indicating whether or not the tread stopped
 x add a sm.settle method to wait until the event queue is empty
-
